--- a/pagina.html
+++ b/pagina.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>GIT BASICO</h1>
-    <h1>GIT BASICO</h1>
-    <h1>GIT BASICO</h1>
-    <h1>GIT BASICO</h1>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
+        <meta name="viewport" content="width=, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css">
+        <title>Document</title>
+    </head>
+    <body>
+        <div class="contenedor">
+            <div id="box-1" class="box">
+                <h3>Titulo</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi fugit veritatis aliquid officia amet atque perspiciatis! Aut vel, earum deleniti magni itaque ipsum nulla commodi voluptatum amet delectus voluptatem iusto.
+                </p>
+            </div>
+            <div id="box-2" class="box">
+                <h3>Titulo</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi fugit veritatis aliquid officia amet atque perspiciatis! Aut vel, earum deleniti magni itaque ipsum nulla commodi voluptatum amet delectus voluptatem iusto.
+                </p>
+            </div>
+            <div id="box-3" class="box">
+                <h3>Titulo</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi fugit veritatis aliquid officia amet atque perspiciatis! Aut vel, earum deleniti magni itaque ipsum nulla commodi voluptatum amet delectus voluptatem iusto.
+                </p>
+            </div>
+            <div class="clr"></div>
+            <div id="box-4" class="box">
+                <h3>Titulo</h3>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi fugit veritatis aliquid officia amet atque perspiciatis! Aut vel, earum deleniti magni itaque ipsum nulla commodi voluptatum amet delectus voluptatem iusto.
+                </p>
+            </div>
+        </div>
+        <a href="">Link</a>
+        <button class="btn">BOTON</button>
+    </body>
 </html>
